--- a/SnaFoo/templates/base.html
+++ b/SnaFoo/templates/base.html
@@ -6,11 +6,11 @@
         <meta charset="utf-8">
         <title>Inventory Project</title>
         <meta name="description" content="">
-    <link rel="stylesheet" herf="{% static 'main.css' %}">
+    <link rel="stylesheet" href="{% static 'main.css' %}">
     </head>
     <body>
         {% block content %}
         {% endblock content %}
-        <script src="{% static 'main.js' %}"></script>/script>
+        <script src="{% static 'main.js' %}"></script>
     </body>
 </html>
