--- a/SnaFoo/templates/inventory/index.html
+++ b/SnaFoo/templates/inventory/index.html
@@ -1,5 +1,45 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+    <table>
+        <thead>
+            <tr>
+                <th>Snacks Always Purchased</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for snack in alwaysPurchasedSnacks %}
+                <tr>
+                    <td>{{ snack.name|capfirst }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <br>
+    <table>
+        <thead>
+            <tr>
+                <th colspan="4">Suggested Snacks</th>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <th># of Votes</th>
+                <th>Last Purchased</th>
+                <th>Vote</th>
+            </tr>
+        </thead>
+        <tbody>
+	        <form action="{% url 'vote' %}" method="post">
+	        {% csrf_token %}
+            {% for snack in suggestedSnacks %}
+                <tr>
+                    <td>{{ snack.name|capfirst }}</td>
+		            <td>{{ snack.votes }}</td>
+		            <td>{{ snack.lastPurchaseDate }}</td>
+		            <td><button name="snack" type="submit" value="{{ snack.id }}">VOTE</button></td>
+		        </tr>
+		    {% endfor %}
+		    </form>
+	    </tbody>
+    </table>
 {% endblock %}
