JSON reading implemented

--- a/SnaFoo/templates/inventory/index.html
+++ b/SnaFoo/templates/inventory/index.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h1>SnaFoo</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Employee Name</th>
+                <th>Votes Remaining</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><b>Michelle Blanchard</b></td>
+                <td><b>3</b></td>
+            </tr>
+        </tbody>
+    </table>
+    <br>
     <table>
         <thead>
             <tr>
