Pep8 compliance, commenting

--- a/SnaFoo/templates/inventory/suggestions.html
+++ b/SnaFoo/templates/inventory/suggestions.html
@@ -5,7 +5,7 @@
 	<br>
 	{% if messages %}
 		{% for message in messages %}
-		<p><pre><font color='red'>{{ message|linebreaks}}</font></pre></p>
+		<p><font color='red'>{{ message|linebreaks }}</font></p>
 		{% endfor %}
 	{% endif %}
 	{% if suggestionsRemaining == 1 %}
