--- a/SnaFoo/templates/base.html
+++ b/SnaFoo/templates/base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Inventory Project</title>
+        <title>SnaFoo</title>
         <meta name="description" content="">
     <link rel="stylesheet" href="{% static 'main.css' %}">
     </head>
