Refactored suggestions view

--- a/SnaFoo/templates/inventory/suggestions.html
+++ b/SnaFoo/templates/inventory/suggestions.html
@@ -52,7 +52,7 @@
 			<form action="" method="POST">
 			    {{ form.as_p }}
 			    {% csrf_token %}
-			    <input type="submit" value="Suggest" name="formSuggestion" class="button">
+			    <input type="submit" value="Suggest" name="form_suggestion" class="button">
 			</form>
 			    
 			</th>
